# ai-skills-collection

./: .gitignore  .markdownlint.json  CLAUDE.md  LICENSE  README.md  mise.toml  skills-lock.json
.claude/reviews/: code-review-20260308-004622.md
.claude/skills/: gcp-expert  generate-ci  resolve-pr-reviews  review-comment-convention  worktree-implement
.claude/skills/generate-ci/: SKILL.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentteam-review/: .env.example  README.md  pyproject.toml
agentteam-review/src/sample_app/: __init__.py  api.py  storage.py  utils.py
generate-ci/: README.md
generate-ci/sample/python/: pyproject.toml  renovate.json
generate-ci/sample/python/.github/workflows/: ci.yml  security.yml
generate-ci/sample/python/src/app/: calculator.py  formatter.py
generate-ci/sample/python/tests/: test_math.py
generate-ci/sample/terraform/: .tflint.hcl  main.tf  outputs.tf  variables.tf
generate-ci/sample/typescript/: biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: setup-project.sh
scripts/hooks/: check-branch-convention.sh  pre-commit
skills/branch-strategy/: SKILL.md
skills/code-review/: SKILL.md
skills/gcp-expert/: SKILL.md
skills/generate-ci/: SKILL.md
skills/resolve-pr-reviews/: SKILL.md
skills/review-comment-convention/: SKILL.md
skills/worktree-implement/: SKILL.md
templates/review-convention/: must-en.md  must-ja.md  p1-en.md  p1-ja.md
(+4 files in other folders)
